# Photonix-V0.0.1-c-build

./: BUILD-ENVIRONMENT-REPORT.md  CMakeLists.txt  CONTRIBUTING.md  DELIVERY-SUMMARY.md  LICENSE  MILESTONE-1-COMPLETE.md  MainWindow.cpp  MainWindow.h  PROJECT-INDEX.md  Photonix-v0.0.1-Development-Plan.md  QUICK-START.md  README.md  STATUS.md  build.sh  build_guide.md  main.cpp
mnt/user-data-outputs/: README.md
